--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-pytorch
 torchvision
 torch
 fastapi
 uvicorn
 gunicorn
 opencv-python
+git+https://github.com/facebookresearch/detectron2.git
+-e .
